--- a/src/website/static/css/mobile.css
+++ b/src/website/static/css/mobile.css
@@ -56,4 +56,8 @@
         padding-bottom: 10px;
         font-size: 20px;
     }
+
+    #header {
+        min-height: 10%!important;
+    }
 }
